# muviz

./: .gitignore  Cargo.toml  README.md
assets/models/: streetlight.glb
assets/textures/concrete/: concrete.mtlx
src/: analysis.rs  app.rs  beat.rs  features.rs  fft.rs  lib.rs  main.rs  model.rs
src/analysis/: audio_decode.rs  beat.rs  compressor.rs  features.rs  gameplay.rs  model.rs  util.rs
src/app/: analyze.rs  assets.rs  colors.rs  debug_ui.rs  file_picker.rs  gameplay.rs  playback.rs
src/app/file_picker/: plugin.rs  resources.rs  ui.rs
src/app/gameplay/: components.rs  current_song.rs  entities.rs  model.rs  ocean.rs  plugin.rs  runtime.rs  systems.rs  teardown.rs  track.rs
src/app/gameplay/entities/: camera.rs  ocean.rs  procedural.rs  song_player.rs  sun.rs  track.rs
src/app/gameplay/entities/procedural/: track_lines.rs
src/app/gameplay/track/: mesh_generation.rs  procedural_meshes.rs  track_generation.rs  track_point.rs
