[package]
name = "muviz"
version = "0.1.0"
edition = "2024"
default-run = "muviz"

[dependencies]
anyhow = "1.0.102"
audioadapter = "2.0.0"
audioadapter-buffers = "2.0.0"
bevy = { version = "0.18.1", features = ["debug"] }
clap = { version = "4.6.0", features = ["derive"] }
realfft = "3.5.0"
rubato = "1.0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
csv = "1.3.1"
symphonia = { version = "0.5.5", features = ["all-codecs"] }
symphonia-adapter-libopus = "0.2.6"
thiserror = "2.0.18"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[[bin]]
name = "muviz"
path = "src/main.rs"

[[bin]]
name = "meta_analyze"
path = "src/bin/meta_analyze.rs"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
